Expand/Collapse flipper list fix.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -685,7 +685,7 @@
 }
 
 #flippers {
-  #flippers-header {
+  #flippers-header, #flippers-footer {
     a, a:hover {
       color: white;
     }
